# SerializedTrees

./: .gitignore  CHANGELOG.md  README.md  benchmark-report.html  mastersdiss.cabal
app/: Benchmark.hs  Main.hs  MainBackup.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.8/: mastersdiss-0.1.0.0-inplace.conf  package.cache
latex-dissertation/: README.md  abstract.tex  acknowledgements.tex  bibliography.bib  declaration.tex  example-appendix.tex  example-section.tex  latex-dissertation.aux  latex-dissertation.bbl  latex-dissertation.bcf  latex-dissertation.fdb_latexmk  latex-dissertation.fls  latex-dissertation.lof  latex-dissertation.lot  latex-dissertation.out  latex-dissertation.run.xml  latex-dissertation.tex  latex-dissertation.toc  strath-dissertation.sty
latex-dissertation/analysis/: quantative-analysis.tex
latex-dissertation/apendix/: appendix.tex
latex-dissertation/background/: literatureReview.tex
latex-dissertation/conclusion/: conclusions.tex  future-works.tex  recomendatations.tex
latex-dissertation/introduction/: introduction.tex
latex-dissertation/literatureReview/: literature-review.tex  reasearch-problem.tex
latex-dissertation/mainBody/: build.tex  design.tex  development-model.tex  testing.tex
src/: Builder.hs  Deserializer.hs  Serialization.hs  Traversal.hs  Tree.hs  Utils.hs  View.hs
test/: AVLBST.hs  Invert.hs  IsSymmetric.hs  Spec.hs  Traversal.hs  invertBST.hs  isSymetric.hs  levelOrder.hs  maxDepth.hs  pathSum.hs
