cabal-version:      2.4
name:               mastersdiss
version:            0.1.0.0
description:        A library that allows users to serialize trees and operate on it.
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Anzar Ahmad Malik
maintainer:         12586091+Mediocorite@users.noreply.github.com

extra-source-files:
    CHANGELOG.md
    README.md

common common-all
    build-depends:    
        base ^>=4.16.4.0,
        binary >= 0.8.9.0,
        bytestring >= 0.11.4.0
    default-language: Haskell2010

library
    import:           common-all
    -- exposed-modules:  Preorder
    hs-source-dirs:   src

executable mastersdiss
    import:           common-all
    main-is:          Main.hs
    -- other-modules:    Preorder
    hs-source-dirs:   app, src
