cabal-version:      2.4
name:               mastersdiss
version:            0.1.0.0
description:        A library that allows users to serialize trees and operate on it.
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Anzar Ahmad Malik
maintainer:         12586091+Mediocorite@users.noreply.github.com

extra-source-files:
    CHANGELOG.md
    README.md

common common-all
    build-depends:    
        base ^>=4.16.4.0,
        binary >= 0.8.9.0,
        bytestring >= 0.11.4.0,
        base16-bytestring >= 1.0 && < 1.2,
        mtl >= 2.2.2
    default-language: Haskell2010

library
    import:           common-all
    exposed-modules:  Serialization, Traversal,
                        Tree, Utils, View
    hs-source-dirs:   src

executable main
    import:           common-all
    main-is:          Main.hs
    -- other-modules:    Preorder
    hs-source-dirs:   app, src

test-suite test
  import:common-all
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
    test
  build-depends:
    base >= 4.14 && < 5,
    bytestring >= 0.11 && < 0.12,
    containers >= 0.6 && < 0.7,
    bytestring-builder >= 0.10 && < 0.11,
    bytestring-strict-builder >= 0.4 && < 0.5,
    transformers >= 0.5 && < 0.6,
    hspec >= 2.7 && < 2.8