cabal-version:      2.4
name:               mastersdiss
version:            0.1.0.0
description:        A library that allows users to serialize trees and operate on it.
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Anzar Ahmad Malik
maintainer:         12586091+Mediocorite@users.noreply.github.com
category:           Data, Serialization
homepage:           https://github.com/Mediocorite/mastersdiss.git

extra-source-files:
    CHANGELOG.md
    README.md

common common-all
    build-depends:    
        base ^>=4.16.4.0,
        binary >= 0.8.9.0,
        bytestring >= 0.11.4.0,
        base16-bytestring >= 1.0 && < 1.2,
        random >= 1.2.1.1,
        mtl >= 2.2.2, 
        deepseq >= 1.4.6.1
    default-language: Haskell2010
    -- ghc-options: -Wall

library
    import:           common-all
    exposed-modules:  Serialization, Traversal, Tree, Builder, View,
                      Invert, IsSymmetric, LevelOrder, MaxDepth, PathSum, 
                      Deserializer
    hs-source-dirs:   src, test

executable main
    import:           common-all
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    mastersdiss

executable benchmark
    import:           common-all
    main-is:          Benchmark.hs
    hs-source-dirs:   app
    build-depends:    
        mastersdiss,
        cassava >= 0.5.3,
        vector >= 0.13.0.0,
        criterion >= 1.5
    ghc-options: -Wall -O2

test-suite test
    import:               common-all
    type:                 exitcode-stdio-1.0
    main-is:              Spec.hs
    hs-source-dirs:       test, src, app
    build-depends:
        hspec >= 2.7.10 && < 2.11.5,
        base >= 4.14 && < 5,
        bytestring >= 0.11 && < 0.12,
        containers >= 0.6 && < 0.7,
        bytestring-builder >= 0.10 && < 0.11,
        bytestring-strict-builder >= 0.4 && < 0.5,
        transformers >= 0.5 && < 0.6,
        mastersdiss
    other-modules:      Serialization, Traversal, Tree, Builder, View,
                        Invert, IsSymmetric, LevelOrder, MaxDepth, PathSum,
                        Deserializer
